fix: reduce selection mask z-index

--- a/src/style/table-selection.less
+++ b/src/style/table-selection.less
@@ -9,6 +9,7 @@
     position: absolute;
     overflow: hidden;
     pointer-events: none;
+    z-index: -1;
     &__line {
       position: absolute;
       background-color: .getCssVar(select-color) [];
